# ops-nn-mirror

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  build.sh  classify_rule.yaml  version.cmake
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
activation/celu_v2/: README.md
activation/clipped_swiglu/: README.md
activation/confusion_softmax_grad/: CMakeLists.txt  README.md
activation/elu/: CMakeLists.txt  README.md
activation/elu_grad/: README.md
activation/elu_grad_v2/: README.md
activation/erfinv/: CMakeLists.txt  README.md
activation/fatrelu_mul/: README.md
activation/ge_glu_v2/: README.md
activation/gelu/: CMakeLists.txt  README.md
activation/gelu_grad_v2/: CMakeLists.txt  README.md
activation/gelu_mul/: README.md
activation/gelu_quant/: README.md
activation/gelu_v2/: README.md
activation/glu/: README.md
activation/hard_shrink/: README.md
activation/hard_shrink_grad/: README.md
activation/hard_sigmoid/: README.md
activation/hard_sigmoid_grad/: README.md
activation/hard_swish/: README.md
activation/hard_swish_grad/: CMakeLists.txt  README.md
activation/hardtanh_grad/: README.md
activation/heaviside/: README.md
activation/leaky_relu/: CMakeLists.txt  README.md
activation/leaky_relu_grad/: README.md
activation/log_sigmoid/: README.md
activation/log_softmax_grad/: README.md
activation/log_softmax_v2/: CMakeLists.txt  README.md
activation/logsigmoid_grad/: CMakeLists.txt  README.md
activation/mish/: README.md
activation/mish_grad/: README.md
activation/p_relu/: CMakeLists.txt  README.md
activation/p_relu_grad_reduce/: README.md
activation/p_relu_grad_update/: README.md
activation/relu/: CMakeLists.txt  README.md
activation/relu_grad/: README.md
activation/relu_grad_v2/: README.md
activation/relu_v2/: README.md
activation/selu/: README.md
activation/selu_grad/: README.md
activation/shrink/: README.md
activation/sigmoid/: CMakeLists.txt  README.md
activation/sigmoid_grad/: README.md
activation/silu_grad/: README.md
activation/softmax_cross_entropy_with_logits/: README.md
activation/softmax_grad/: README.md
activation/softmax_v2/: CMakeLists.txt  README.md
activation/softplus/: CMakeLists.txt  README.md
activation/softplus_v2/: README.md
activation/softplus_v2_grad/: README.md
activation/softshrink/: README.md
activation/softshrink_grad/: README.md
activation/squared_relu/: README.md
activation/swi_glu/: README.md
activation/swi_glu_grad/: README.md
activation/swish/: CMakeLists.txt  README.md
activation/swish_grad/: README.md
activation/threshold/: README.md
activation/threshold_grad_v2_d/: README.md
cmake/: custom_kernel.cmake  func.cmake  gen_ops_info.cmake  intf_pub_linux.cmake  makeself_built_in.cmake  opbuild.cmake  package.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
cmake/modules/: FindOPBASE.cmake
cmake/torch_extension/: ascend.cmake  python.cmake  torch.cmake  torch_npu.cmake
common/graph_fusion/: CMakeLists.txt
control/assert/: README.md
control/identity/: README.md
control/identity_n/: README.md
control/rank/: README.md
control/shape/: README.md
control/shape_n/: README.md
conv/conv2d_v2/: README.md
conv/conv3d_backprop_filter_v2/: README.md
conv/conv3d_backprop_input_v2/: README.md
conv/conv3d_transpose_v2/: README.md
conv/conv3d_v2/: README.md
conv/convolution_backward/: README.md
conv/convolution_forward/: README.md
conv/deformable_conv2d/: README.md
conv/deformable_offsets/: README.md
conv/deformable_offsets_grad/: CMakeLists.txt  README.md
conv/extend_conv2d/: README.md
conv/extend_conv_transpose/: README.md
conv/quant_conv3d/: README.md
docs/: QUICKSTART.md  README.md
docs/zh/: op_api_list.md  op_list.md
examples/: README.md
examples/add_example/: README.md
examples/add_example_aicpu/: README.md
examples/fast_kernel_launch_example/: README.md
foreach/foreach_abs/: README.md
foreach/foreach_acos/: README.md
foreach/foreach_add_list/: README.md
foreach/foreach_add_scalar/: README.md
foreach/foreach_add_scalar_list/: README.md
foreach/foreach_addcdiv_list/: README.md
foreach/foreach_addcdiv_scalar/: README.md
foreach/foreach_addcdiv_scalar_list/: README.md
foreach/foreach_addcmul_list/: README.md
foreach/foreach_addcmul_scalar/: README.md
foreach/foreach_addcmul_scalar_list/: README.md
foreach/foreach_asin/: README.md
foreach/foreach_atan/: README.md
scripts/: check_build_dependencies.py
tests/ut/op_graph/: CMakeLists.txt
tests/ut/op_graph/stub/: data_infershape.cpp
(+3923 files in other folders)
